--- a/Views/TextBoxWithPlaceHolder.xaml
+++ b/Views/TextBoxWithPlaceHolder.xaml
@@ -77,7 +77,7 @@
                             <Storyboard SpeedRatio="10">
                                 <DoubleAnimation Storyboard.TargetProperty="FontSize" To="12"/>
                                 <ThicknessAnimation Storyboard.TargetProperty="Margin" To="-3 12 0 0"/>
-                                <DoubleAnimation Storyboard.TargetProperty="Height" From="{Binding ActualHeight, ElementName=text}" To="40"/>
+                                <!--<DoubleAnimation Storyboard.TargetProperty="Height" From="20" To="40"/>-->
                                 
                             </Storyboard>
                         </BeginStoryboard>
@@ -97,7 +97,6 @@
         </Style>
 
         <Style TargetType="{x:Type PasswordBox}">
-            <Setter Property="Padding" Value="2,0,30,0"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="FontWeight" Value="SemiBold"/>
             <Setter Property="Background" Value="Transparent"/>
@@ -108,14 +107,14 @@
 
                 <!--So, to know when to trigger wwe will first check what is the font size of our title-->
                 <!--if it is 15pt then it means the title in above-->
-                <DataTrigger Binding="{Binding FontSize, ElementName=title}" Value="15">
+                <DataTrigger Binding="{Binding FontSize, ElementName=title}" Value="11">
 
                     <!--Default Position and fontsize of Title-->
                     <DataTrigger.EnterActions>
                         <BeginStoryboard>
                             <Storyboard SpeedRatio="10">
-                                <DoubleAnimation Storyboard.TargetProperty="FontSize" To="20"/>
-                                <ThicknessAnimation Storyboard.TargetProperty="Margin" To="0 20 0 0"/>
+                                <DoubleAnimation Storyboard.TargetProperty="FontSize" To="11"/>
+                                <ThicknessAnimation Storyboard.TargetProperty="Margin" To="-3 0 0 0"/>
                             </Storyboard>
                         </BeginStoryboard>
                     </DataTrigger.EnterActions>
@@ -124,8 +123,8 @@
                     <DataTrigger.ExitActions>
                         <BeginStoryboard>
                             <Storyboard SpeedRatio="10">
-                                <DoubleAnimation Storyboard.TargetProperty="FontSize" To="15"/>
-                                <ThicknessAnimation Storyboard.TargetProperty="Margin" To="0"/>
+                                <DoubleAnimation Storyboard.TargetProperty="FontSize" To="12"/>
+                                <ThicknessAnimation Storyboard.TargetProperty="Margin" To="-3 12 0 0"/>
                             </Storyboard>
                         </BeginStoryboard>
                     </DataTrigger.ExitActions>
