--- a/Views/TextBoxWithPlaceHolder.xaml
+++ b/Views/TextBoxWithPlaceHolder.xaml
@@ -28,7 +28,7 @@
                         <BeginStoryboard>
                             <Storyboard SpeedRatio="10">
                                 <DoubleAnimation Storyboard.TargetProperty="FontSize" To="11"/>
-                                <ThicknessAnimation Storyboard.TargetProperty="Margin" To="-3 0 0 0"/>
+                                <ThicknessAnimation Storyboard.TargetProperty="Margin" To="6 0 5 0"/>
                             </Storyboard>
                         </BeginStoryboard>
                     </DataTrigger.EnterActions>
@@ -38,7 +38,7 @@
                         <BeginStoryboard>
                             <Storyboard SpeedRatio="10">
                                 <DoubleAnimation Storyboard.TargetProperty="FontSize" To="10"/>
-                                <ThicknessAnimation Storyboard.TargetProperty="Margin" To="-3 0 0 15"/>
+                                <ThicknessAnimation Storyboard.TargetProperty="Margin" To="6 -3 5 15"/>
                             </Storyboard>
                         </BeginStoryboard>
                     </DataTrigger.ExitActions>
@@ -66,7 +66,7 @@
                         <BeginStoryboard>
                             <Storyboard SpeedRatio="10">
                                 <DoubleAnimation Storyboard.TargetProperty="FontSize" To="11"/>
-                                <ThicknessAnimation Storyboard.TargetProperty="Margin" To="-3 0 0 0"/>
+                                <ThicknessAnimation Storyboard.TargetProperty="Margin" To="6 0 5 0"/>
                             </Storyboard>
                         </BeginStoryboard>
                     </DataTrigger.EnterActions>
@@ -76,7 +76,7 @@
                         <BeginStoryboard>
                             <Storyboard SpeedRatio="10">
                                 <DoubleAnimation Storyboard.TargetProperty="FontSize" To="12"/>
-                                <ThicknessAnimation Storyboard.TargetProperty="Margin" To="-3 12 0 0"/>
+                                <ThicknessAnimation Storyboard.TargetProperty="Margin" To="6 12 5 0"/>
                                 <!--<DoubleAnimation Storyboard.TargetProperty="Height" From="20" To="40"/>-->
                                 
                             </Storyboard>
@@ -114,7 +114,7 @@
                         <BeginStoryboard>
                             <Storyboard SpeedRatio="10">
                                 <DoubleAnimation Storyboard.TargetProperty="FontSize" To="11"/>
-                                <ThicknessAnimation Storyboard.TargetProperty="Margin" To="-3 0 0 0"/>
+                                <ThicknessAnimation Storyboard.TargetProperty="Margin" To="5 0 35 0"/>
                             </Storyboard>
                         </BeginStoryboard>
                     </DataTrigger.EnterActions>
@@ -124,7 +124,7 @@
                         <BeginStoryboard>
                             <Storyboard SpeedRatio="10">
                                 <DoubleAnimation Storyboard.TargetProperty="FontSize" To="12"/>
-                                <ThicknessAnimation Storyboard.TargetProperty="Margin" To="-3 12 0 0"/>
+                                <ThicknessAnimation Storyboard.TargetProperty="Margin" To="5 12 35 0"/>
                             </Storyboard>
                         </BeginStoryboard>
                     </DataTrigger.ExitActions>
@@ -133,11 +133,13 @@
                 <!--hide password if the IsPassword = false;-->
                 <DataTrigger Binding="{Binding IsPassword}" Value="False">
                     <Setter Property="Visibility" Value="Collapsed"/>
+                    <Setter Property="Margin" Value="5 0 35 0"/>
                 </DataTrigger>
 
                 <!--also hide when the Show password Button is pressed-->
                 <DataTrigger Binding="{Binding IsPressed, ElementName=showPass}" Value="True">
                     <Setter Property="Visibility" Value="Collapsed"/>
+                    <Setter Property="Margin" Value="5 0 35 0"/>
                 </DataTrigger>
             </Style.Triggers>
         </Style>
@@ -147,13 +149,13 @@
             <Setter Property="BorderThickness" Value="0"/>
             <Setter Property="HorizontalAlignment" Value="Right"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="Foreground" Value="#A3A3A4"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
                         <Border Background="{TemplateBinding Background}">
                             <Path 
                                 Width="20"
+                                Margin="0,0,10,0"
                                 Stretch="Uniform"
                                 Fill="{TemplateBinding Foreground}"
                                 Data="{StaticResource showPass}"/>
@@ -178,7 +180,7 @@
         Height="40">
         
         <!--Border Shadow Effect-->
-        <Grid Margin="9,6">
+        <Grid>
             <!--Title-->
             <TextBlock 
             x:Name="title"
@@ -186,6 +188,7 @@
 
             <!--Textbox-->
             <TextBox 
+                Margin="5,0,35,0"
                 x:Name="text"
                 Text="{Binding Text,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                 Style="{StaticResource credentialsTxTStyle}"/>
@@ -194,7 +197,7 @@
 
             <!--if we want to use this textbox as password box then..-->
             <!--To update textbox on password change-->
-            <PasswordBox x:Name="passbox">
+            <PasswordBox x:Name="passbox" Margin="0,0,35,0" Width="236">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="PasswordChanged" >
                         <i:InvokeCommandAction Command="{Binding PasswordChangedCommand}"  CommandParameter="{Binding ElementName=passbox,  Mode=OneWay}"/>
