--- a/Views/TextBoxWithPlaceHolderUC.xaml
+++ b/Views/TextBoxWithPlaceHolderUC.xaml
@@ -1,9 +1,11 @@
-﻿<UserControl x:Class="InstagramTextBoxWithPlaceHolder.Views.TextBoxWithPlaceHolder"
+﻿<UserControl x:Class="InstagramTextBoxWithPlaceHolder.Views.TextBoxWithPlaceHolderUC"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/906" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/908" 
-             xmlns:local="clr-namespace:InstagramTextBoxWithPlaceHolder.Views" xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:local="clr-namespace:InstagramTextBoxWithPlaceHolder.Views"
+             mc:Ignorable="d" 
              MinWidth="270"
              MaxWidth="270"
              Width="270"
@@ -72,13 +74,13 @@
                     </DataTrigger.EnterActions>
 
                     <!--Position and FontSize of Title when Text Textbox has value-->
-                    <DataTrigger.ExitActions>       
+                    <DataTrigger.ExitActions>
                         <BeginStoryboard>
                             <Storyboard SpeedRatio="10">
                                 <DoubleAnimation Storyboard.TargetProperty="FontSize" To="12"/>
                                 <ThicknessAnimation Storyboard.TargetProperty="Margin" To="6 12 5 0"/>
                                 <!--<DoubleAnimation Storyboard.TargetProperty="Height" From="20" To="40"/>-->
-                                
+
                             </Storyboard>
                         </BeginStoryboard>
                     </DataTrigger.ExitActions>
@@ -134,6 +136,8 @@
                 <DataTrigger Binding="{Binding IsPassword}" Value="False">
                     <Setter Property="Visibility" Value="Collapsed"/>
                     <Setter Property="Margin" Value="5 0 35 0"/>
+                    <!--<Setter TargetName="{Binding ElementName=text}" Property="Width" Value="230"></Setter>-->
+                    <!--<Setter TargetName="{Binding ElementName=text}" Value="230"></Setter>-->
                 </DataTrigger>
 
                 <!--also hide when the Show password Button is pressed-->
@@ -143,7 +147,7 @@
                 </DataTrigger>
             </Style.Triggers>
         </Style>
-        
+
         <Style TargetType="{x:Type Button}">
             <Setter Property="Background" Value="Transparent"/>
             <Setter Property="BorderThickness" Value="0"/>
@@ -178,7 +182,7 @@
         BorderBrush="{StaticResource PlaceHolderTboxBorderBrush}"
         Background="{StaticResource PlaceHolderTboxBackgroundColor}"
         Height="40">
-        
+
         <!--Border Shadow Effect-->
         <Grid>
             <!--Title-->
@@ -188,16 +192,18 @@
 
             <!--Textbox-->
             <TextBox 
-                Margin="5,0,35,0"
+                Width="{Binding Width}"
+                Margin="5,0,0,0"
                 x:Name="text"
+                HorizontalAlignment="Left"
                 Text="{Binding Text,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
-                Style="{StaticResource credentialsTxTStyle}"/>
+                Style="{StaticResource credentialsTxTStyle}" />
 
             <!--To detect if our textbox is password box or not we will use a bool-->
 
             <!--if we want to use this textbox as password box then..-->
             <!--To update textbox on password change-->
-            <PasswordBox x:Name="passbox" Margin="0,0,35,0" Width="236">
+            <PasswordBox x:Name="passbox" Margin="0,0,10,0">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="PasswordChanged" >
                         <i:InvokeCommandAction Command="{Binding PasswordChangedCommand}"  CommandParameter="{Binding ElementName=passbox,  Mode=OneWay}"/>
@@ -214,4 +220,4 @@
                 VerticalAlignment="Center"/>
         </Grid>
     </Border>
-</UserControl>
+</UserControl> 
